Fix/dark mode (#59)
* Improve main menu.

* Add store switcher.

* update.

* Improve flash alert

--- a/app/assets/stylesheets/spree/backend/components/_badges.scss
+++ b/app/assets/stylesheets/spree/backend/components/_badges.scss
@@ -1,67 +1,1 @@
-// Success
-.bg-active,
-.bg-success,
-.bg-sold,
-.bg-open,
-.bg-authorized,
-.bg-published,
-.bg-live,
-.bg-approved,
-.text-bg-success {
-  color: var(--bs-gray-900) !important;
-  background: var(--bs-success) !important;
-}
 
-// Danger
-.bg-failed,
-.bg-considered_risky,
-.bg-error,
-.bg-invalid,
-.bg-rejected,
-.bg-closed {
-  background: var(--bs-danger) !important;
-}
-
-// Warning
-.bg-ready,
-.bg-processing,
-.bg-pending,
-.bg-awaiting_return,
-.bg-returned,
-.bg-credit_owed,
-.bg-balance_due,
-.bg-backorder,
-.bg-checkout,
-.bg-cart,
-.bg-address,
-.bg-delivery,
-.bg-payment,
-.bg-confirm,
-.bg-canceled,
-.bg-void,
-.bg-inactive,
-.bg-notice,
-.bg-suspended,
-.bg-partial {
-  color: var(--bs-gray-900) !important;
-  background: var(--bs-warning) !important;
-}
-
-// light
-.bg-completed,
-.bg-complete,
-.bg-resumed,
-.bg-considered_safe,
-.bg-paid,
-.bg-shipped,
-.badge.bg-disabled,
-.badge.bg-invited
-.bg-light {
-  color: var(--bs-gray-900) !important;
-  background: var(--bs-light) !important;
-}
-
-// Info
-.bg-onboarding {
-  background: var(--bs-info) !important;
-}
