--- a/app/assets/stylesheets/spree/backend/components/_sidebar.scss
+++ b/app/assets/stylesheets/spree/backend/components/_sidebar.scss
@@ -6,7 +6,7 @@ aside#main-sidebar {
   #navHeader {
     z-index: 1042;
 
-    .spree-logo{
+    .spree-logo a {
       color: var(--sa-logo);
     }
   }
