--- a/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -10,6 +10,8 @@
   $table-hover-bg-factor: .02;
   $table-hover-color: inherit;
   $border-radius: 3px;
+  $modal-fade-transform: translate(0, 150px);
+
 // Bootstrap SCSS Vars ### END ###
 
 :root body.admin {
