--- a/app/assets/stylesheets/spree/backend/theme/_base.scss
+++ b/app/assets/stylesheets/spree/backend/theme/_base.scss
@@ -20,6 +20,10 @@
     --#{$prefix}card-cap-padding-x: var(--#{$prefix}card-spacer-x);
   }
 
+  .carousel-item {
+    transition: transform .2s ease-in-out;
+  }
+
   .dropdown-menu {
     --bs-dropdown-item-padding-x: .5rem;
     --bs-dropdown-item-padding-y: .5rem;
@@ -98,22 +102,22 @@
     border-top: none;
   }
 
-  @keyframes fadeOutDown {
+  @keyframes fadeOutDownAlert {
     from {
       opacity: 1;
     }
 
     to {
       opacity: 0;
-      -webkit-transform: translate3d(0, 100%, 0);
-      transform: translate3d(0, 100%, 0);
+      transform: translate3d(0, 500px, 0);
     }
   }
+
   .animate__fadeInUp.hide {
-    -webkit-animation-name: fadeOutDown;
-    animation-name: fadeOutDown;
+    animation-name: fadeOutDownAlert;
     display: block !important;
-    bottom: -200px;
+    bottom: 0;
+    margin-bottom: 0 !important;
   }
 
   table.table tr:last-child td {
